# learn_math

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
src/learn_math.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: waves_test.py
