[metadata]
name = learn_math
version = 0.0.1
author = Marc Mertens
author_email = marc.mertens@skillsoft.com
description = A example package containing two modules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lispmarc/PythonExamplePackage
project_urls =
    Bug Tracker = https://github.com/lispmarc/PythonExamplePackage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src